@@ -1,3 +1,4 @@
+- added count_by()
 - added i?partition_by()
 
 0.5.4
